Fixing align from button Repo and Site of portfolio card

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1568,7 +1568,8 @@ form div button:hover {
         height: 2.5rem;
         padding: 0;
         display: flex;
-        
+        align-items: center;
+        justify-content: center;
     }
 
     .down-card div a img {
